internal/oracleparser/y.output

state 0
	$accept: .statement $end 

	SELECT  shift 3
	.  error

	statement  goto 1
	select_stmt  goto 2

state 1
	$accept:  statement.$end 

	$end  accept
	.  error


state 2
	statement:  select_stmt.    (1)

	.  reduce 1 (src line 76)


state 3
	select_stmt:  SELECT.IDENTIFIER FROM IDENTIFIER opt_where_clause 

	IDENTIFIER  shift 4
	.  error


state 4
	select_stmt:  SELECT IDENTIFIER.FROM IDENTIFIER opt_where_clause 

	FROM  shift 5
	.  error


state 5
	select_stmt:  SELECT IDENTIFIER FROM.IDENTIFIER opt_where_clause 

	IDENTIFIER  shift 6
	.  error


state 6
	select_stmt:  SELECT IDENTIFIER FROM IDENTIFIER.opt_where_clause 
	opt_where_clause: .    (3)

	WHERE  shift 8
	.  reduce 3 (src line 84)

	opt_where_clause  goto 7

state 7
	select_stmt:  SELECT IDENTIFIER FROM IDENTIFIER opt_where_clause.    (2)

	.  reduce 2 (src line 80)


state 8
	opt_where_clause:  WHERE.IDENTIFIER '=' STRING_LITERAL 

	IDENTIFIER  shift 9
	.  error


state 9
	opt_where_clause:  WHERE IDENTIFIER.'=' STRING_LITERAL 

	'='  shift 10
	.  error


state 10
	opt_where_clause:  WHERE IDENTIFIER '='.STRING_LITERAL 

	STRING_LITERAL  shift 11
	.  error


state 11
	opt_where_clause:  WHERE IDENTIFIER '=' STRING_LITERAL.    (4)

	.  reduce 4 (src line 86)


49 terminals, 4 nonterminals
5 grammar rules, 12/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 2/240000
0 extra closures
8 shift entries, 1 exceptions
3 goto entries
0 entries saved by goto default
Optimizer space used: output 11/240000
11 table entries, 0 zero
maximum spread: 28, maximum offset: 28
